--- a/css/style.css
+++ b/css/style.css
@@ -53,9 +53,9 @@
 }
 
 .unique {
-    margin: auto;    
     display: flex;
-    justify-content: center;    
+    justify-content: center;
+    align-items: center;
 }
 
 .blue-section-col {
